--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,23 @@ members = [
 
 [profile.release]
 lto = true
+
+[workspace.dependencies]
+bincode = "1.3.3"
+chrono = "0.4.22"
+console_engine = "2.5.0"
+crossbeam-channel = "0.5.6"
+crossterm = { version = "0.24.0", features = ["serde"] }
+laminar = "0.5.0"
+legion = "0.4.0"
+log = "0.4.17"
+message-io = { version = "0.14.6", default-features = false, features = ["tcp"] }
+ndarray = { version = "0.15.6", features = ["rayon", "serde"] }
+rand = "0.8.5"
+rayon = "1.5.3"
+regex = "1.6.0"
+serde = { version = "1.0.145", features = ["derive"] }
+serde_json = "1.0.85"
+simplelog = "0.12.0"
+strum_macros = "0.24.3"
+uuid = { version = "1.1.2", features = ["serde", "v4"] }
