--- a/rustyhack_server/Cargo.toml
+++ b/rustyhack_server/Cargo.toml
@@ -16,17 +16,17 @@ publish = false
 
 [dependencies]
 rustyhack_lib = { path = "../rustyhack_lib" }
-log = "0.4.17"
-simplelog = "0.12.0"
-crossterm = { version = "0.24.0", features = ["serde"] }
-legion = "0.4.0"
-laminar = "0.5.0"
-crossbeam-channel = "0.5.6"
-serde = { version = "1.0.144", features = ["derive"] }
-serde_json = "1.0.85"
-bincode = "1.3.3"
-rand = "0.8.5"
-uuid = { version = "1.1.2", features = ["serde", "v4"] }
-rayon = "1.5.3"
-ndarray = { version = "0.15.6", features = ["rayon"] }
-message-io = { version = "0.14.6", default-features = false, features = ["tcp"] }
+log.workspace = true
+simplelog.workspace = true
+crossterm.workspace = true
+legion.workspace = true
+laminar.workspace = true
+crossbeam-channel.workspace = true
+serde.workspace = true
+serde_json.workspace = true
+bincode.workspace = true
+rand.workspace = true
+uuid.workspace = true
+rayon.workspace = true
+ndarray.workspace = true
+message-io.workspace = true
