chore(deps): update dependencies & fix warning after rust 1.72.0

--- a/rustyhack_client/Cargo.toml
+++ b/rustyhack_client/Cargo.toml
@@ -2,7 +2,7 @@
 name = "rustyhack_client"
 version = "0.3.2"
 authors = ["pbellchambers <pbellchambers@users.noreply.github.com>"]
-edition = "2021"
+edition.workspace = true
 homepage = "https://github.com/pbellchambers/rustyhack-mmo"
 repository = "https://github.com/pbellchambers/rustyhack-mmo"
 license = "AGPL-3.0"
