--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,6 @@
 [workspace]
+package.edition = "2021"
+resolver = "2"
 members = [
     "rustyhack_client",
     "rustyhack_lib",
@@ -21,8 +23,8 @@ message-io = { version = "0.17.0", default-features = false, features = ["tcp"] 
 ndarray = { version = "0.15.6", features = ["rayon", "serde"] }
 rand = "0.8.5"
 rayon = "1.7.0"
-regex = "1.9.3"
-serde = { version = "1.0.185", features = ["derive"] }
+regex = "1.9.4"
+serde = { version = "1.0.188", features = ["derive"] }
 serde_json = "1.0.105"
 simplelog = "0.12.1"
 strum_macros = "0.24.3"
